--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim-colors-solarized"]
 	path = vim-colors-solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
+[submodule "vim-guicolorscheme"]
+	path = vim-guicolorscheme
+	url = git://github.com/thinca/vim-guicolorscheme.git
