--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vim-guicolorscheme"]
 	path = vim-guicolorscheme
 	url = git://github.com/thinca/vim-guicolorscheme.git
+[submodule "vim-jade"]
+	path = vim-jade
+	url = https://github.com/digitaltoad/vim-jade
