--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "gitignore"]
 	path = gitignore
 	url = git://github.com/vim-scripts/gitignore.git
+[submodule "vim-less"]
+	path = vim-less
+	url = git://github.com/groenewege/vim-less.git
